# zkmsg

./: .gitignore  device_pairing_architecture.md  package-lock.json  package.json
backend/: go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/antispam/: pow.go  ratelimiter.go
backend/internal/api/: blob_routes.go  routes.go
backend/internal/config/: config.go
backend/internal/envelope/: envelope.go
backend/internal/hub/: connection.go  hub.go
backend/internal/middleware/: middleware.go
backend/internal/store/: blobstore.go  mailbox.go  prekeys.go
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.tsx  ChatArea.tsx  LockScreen.tsx  MessageBubble.tsx  QRScanner.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/crypto/: devicePairing.ts  doubleRatchet.ts  fileCrypto.ts  identity.ts  keyDerivation.ts  qrBundle.ts  secureMemory.ts  sessionManager.ts
frontend/src/hooks/: useChatDatabase.ts
frontend/src/network/: websocketManager.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.css  LoginPage.tsx
frontend/src/types/: attachment.ts  crypto.ts
frontend/tests/: doubleRatchet.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  main.rs  schema.sql
