[package]
name = "zkmsg"
version = "0.1.0"
description = "ZKMsg - Zero-Knowledge Messenger"
authors = ["ratz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["sqlcipher"] }
x25519-dalek = "1.1.1"
rand = "0.8.5"
hex = "0.4.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
